--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "branch-guard",
+  "name": "branchguard",
   "version": "1.0.0",
   "description": "Prevent merge conflicts by blocking dangerous branch switches",
   "type": "module",
   "main": "dist/cli.js",
   "bin": {
-    "branch-guard": "dist/cli.js"
+    "branchguard": "dist/cli.js"
   },
   "scripts": {
     "build": "ncc build src/cli.js -o dist",
@@ -16,10 +16,29 @@
     "branch",
     "merge-conflict",
     "workflow",
-    "cli"
+    "cli",
+    "git-hooks",
+    "divergence",
+    "rebase",
+    "conflict-prevention",
+    "developer-tools"
   ],
-  "author": "",
+  "author": "uvenkatateja",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/uvenkatateja/branchguard.git"
+  },
+  "bugs": {
+    "url": "https://github.com/uvenkatateja/branchguard/issues"
+  },
+  "homepage": "https://github.com/uvenkatateja/branchguard#readme",
+  "files": [
+    "dist/",
+    "README.md",
+    "LICENSE"
+  ],
+  "packageManager": "pnpm@9.0.0",
   "dependencies": {
     "chalk": "^5.3.0",
     "commander": "^12.0.0",
