--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "branchguard",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Prevent merge conflicts by blocking dangerous branch switches",
   "type": "module",
-  "main": "dist/cli.js",
+  "main": "dist/index.js",
   "bin": {
-    "branchguard": "dist/cli.js"
+    "branchguard": "dist/index.js"
   },
   "scripts": {
     "build": "ncc build src/cli.js -o dist",
@@ -40,6 +40,7 @@
   ],
   "packageManager": "pnpm@9.0.0",
   "dependencies": {
+    "branchguard": "^1.0.0",
     "chalk": "^5.3.0",
     "commander": "^12.0.0",
     "ora": "^8.0.1",
